objects/record_type_id__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>stores the record type IDs</description>
    <fields>
        <fullName>cardiomessenger_complaint_record_type_id__c</fullName>
        <label>CardioMessenger Complaint Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employee_contact_record_type_id__c</fullName>
        <label>Employee Contact Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>general_complaint_record_type_id__c</fullName>
        <label>General Complaint Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>medical_device_reporting_case_id__c</fullName>
        <label>Medical Device Reporting Case ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oos_complaint_record_type_id__c</fullName>
        <label>OOS Complaint Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_account_record_type_id__c</fullName>
        <label>Other Account Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_contact_record_type_id__c</fullName>
        <label>Other Contact Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ous_oem_complaint_record_type_id__c</fullName>
        <label>OUS/OEM Complaint Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>patient_account_record_type_id__c</fullName>
        <label>Patient Account Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>physician_account_record_type_id__c</fullName>
        <label>Physician Account Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>physician_contact_record_type_id__c</fullName>
        <label>Physician Contact Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>programmer_complaint_record_type_id__c</fullName>
        <label>Programmer Complaint Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revision_complaint_record_type_id__c</fullName>
        <label>Revision Complaint Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rp_complaint_record_type_id__c</fullName>
        <label>RP Complaint Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>us_account_record_type_id__c</fullName>
        <label>US Account Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>record type id</label>
</CustomObject>